--- a/src/components/Chatbox.module.css
+++ b/src/components/Chatbox.module.css
@@ -10,7 +10,7 @@
 
 .messages {
   padding: 20px;
-  height: calc(100% - 155px);
+  height: calc(100% - 160px);
   overflow: auto;
 }
 
@@ -22,11 +22,13 @@
 
 .submitButton {
   width: 100%;
+  height: auto;
   border-radius: 0;
 }
 
 .container {
   height: 100%;
+  max-height: 800px;
   width: 100%;
   background-color: #f3f3f3;
 }
