--- a/src/components/HomePage.module.css
+++ b/src/components/HomePage.module.css
@@ -11,6 +11,7 @@
   display: flex;
   width: 100%;
   height: 100%;
+  max-height: 800px;
   max-width: 1000px;
   border-radius: 10px;
   box-shadow: 0px 2px 4px 0 rgba(0, 0, 0, 0.25);
