--- a/src/components/MessageBubble.module.css
+++ b/src/components/MessageBubble.module.css
@@ -1,4 +1,18 @@
 .container {
+  align-items: row;
+}
+
+.meContainer {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.othersContainer {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.message {
   display: flex;
   flex-direction: column;
   margin-bottom: 20px;
@@ -19,10 +33,12 @@
 }
 
 .me {
+  order: 1;
   align-items: flex-end;
 }
 
 .others {
+  order: 2;
   align-items: flex-start;
 }
 
@@ -32,4 +48,18 @@
 
 .othersBubble {
   background-color: #fff;
+}
+
+.avatar {
+  object-fit: cover;
+}
+
+.meAvatar {
+  order: 2;
+  margin-left: 10px;
+}
+
+.othersAvatar {
+  order: 1;
+  margin-right: 10px;
 }
