--- a/src/components/Chatbox.module.css
+++ b/src/components/Chatbox.module.css
@@ -11,6 +11,7 @@
 .messages {
   padding: 20px;
   height: calc(100% - 160px);
+  width: 100%;
   overflow: auto;
 }
 
@@ -26,9 +27,8 @@
   border-radius: 0;
 }
 
-.container {
-  height: 100%;
-  max-height: 800px;
+.chatHistoryButton {
   width: 100%;
-  background-color: #f3f3f3;
+  height: auto;
+  padding: 10px;
 }
