--- a/src/components/HistoryMessages.module.css
+++ b/src/components/HistoryMessages.module.css
@@ -63,28 +63,30 @@
     pointer-events: none;
     transition: opacity 0.3s;
     width: 480px;
-    height: auto; /* 使用自适应高度 */
+    height: auto;
+    /* 使用自适应高度 */
     display: flex;
     flex-direction: column;
-    overflow-y: auto; /* 添加垂直滚动条 */
-  }
-  
-  .memberGrid {
+    overflow-y: auto;
+    /* 添加垂直滚动条 */
+}
+
+.memberGrid {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-start;
     width: 100%;
-  }
-  
-  .member {
+}
+
+.member {
     width: 20%;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 16px;
     cursor: pointer;
-  }
+}
 
 .member:hover {
     background-color: #f0f0f0;
